--- a/sesi 9 1/index.html
+++ b/sesi 9 1/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <form style="width: 90%; padding-left: 5%;">
-            <h1 style="text-align: center;">WEB PROJECT - Check first letter uppercase</h1>
+            <h1 style="text-align: center;">WEB PROJECT - ARRAY</h1>
             <div class="form-group">
               <label for="inputText">Kata</label>
               <input type="text" class="form-control" id="txtKata">
@@ -22,7 +22,4 @@
         <div id="hasil" style="text-align: center;"></div>
     </body>
     <script src="index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </html>
