--- a/sesi 9 2/index.html
+++ b/sesi 9 2/index.html
@@ -16,7 +16,9 @@
         </form>
         <div id="lengthDataArray" style="text-align: center;"></div>
         <div id="dataArray" style="text-align: center;"></div>
-        <div id="hasil" style="text-align: center;"></div>
+        <div style="text-align: center;">
+            <ol id="hasil"></ol>
+        </div>
     </body>
     <script src="index.js"></script>
 </html>
