--- a/sesi 9 6/index.html
+++ b/sesi 9 6/index.html
@@ -11,7 +11,7 @@
         <title></title>
     </head>
     <body>
-        <div class="container" style="width: 50%;float: left;" >        
+        <div class="container" style="width: 50%;float: left;height: 100%" >        
             <form style="width: 90%; padding-left: 5%;">
                 <h1 style="text-align: center;">WEB PROJECT - TWEET</h1>
                 <div class="form-group">
@@ -21,8 +21,8 @@
                 <button type="proses" class="btn btn-primary" onclick="onSubmit(event)" >Submit</button>
             </form>
         </div>
-        <div class="container" style="width: 50%;">
-            <div id="hasil" style="text-align: center;"></div>
+        <div class="container" style="width: 30%; height: 100%; float: left;">
+            <div id="hasil" style="text-align: justify;"></div>
         </div>
     </body>
     <script src="index.js"></script>
